feat: 修改配置文件并成功运行

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,7 +42,7 @@ spring:
       prod-mysql: prod, mysql
       prod-pgsql: prod, pgsql
       native: native
-    active: native
+    active: default
   servlet:
     multipart:
       max-file-size: 50MB
