--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -10,7 +10,7 @@ spring:
           lob:
             non_contextual_creation: true
   datasource:
-    url: jdbc:mysql://${DATABASE_HOST:localhost}:${DATABASE_PORT:3306}/${DATABASE_NAME:jmalcloud}?useUnicode=true&characterEncoding=UTF8&useSSL=false&useUnicode=true&serverTimezone=GMT&connectTimeout=60000&socketTimeout=60000
+    url: jdbc:mysql://${DATABASE_HOST:localhost}:${DATABASE_PORT:3306}/${DATABASE_NAME:jmalcloud}?useUnicode=true&characterEncoding=UTF8&useSSL=false&useUnicode=true&serverTimezone=GMT&connectTimeout=60000&socketTimeout=60000&&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${DATABASE_USER:root}
     password: ${DATABASE_PASSWORD:root}
